<resources>
    <string name="app_name">Elite Event</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="event_details">EVENTS DETAILS</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="contact">Contact Number</string>
    <string name="enter_contact_no">Enter Contact No</string>
    <string name="date">Date</string>
    <string name="enter_date">Enter Event Date</string>
    <string name="place">Venue</string>
    <string name="enter_venue">Enter venue</string>
    <string name="note">Note</string>
    <string name="enter_note">NOTE</string>
    <string name="add">ADD</string>
    <string name="details">Details</string>
    <string name="event">EVENT</string>
    <string name="guest">GUEST</string>
    <string name="budget">BUDGET</string>
    <string name="vendors">VENDOR</string>
    <string name="schedule">SCHEDULE</string>
    <string name="vendor">VENDORS</string>
    <string name="enter_event_name">Event Name</string>
    <string name="event_name">Event Name</string>
    <string name="event_Id">Event ID</string>
    <string name="enter_event_id">Enter Event Id</string>
    <string name="client_name">Client Name</string>
    <string name="enter_client_name">Enter Client Name</string>
    <string name="add_new_guest">Add a new guest</string>
    <string name="Last_name">Last Name</string>
    <string name="adult">Adult</string>
    <string name="child">Child</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="group">Group</string>
    <string name="table">Table</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="address">Address</string>
    <string name="Invitation_send">Invitation sent</string>
    <string name="notsend">Not Send</string>
    <string name="save">Save</string>
    <string name="add_new_cost">Add a new cost</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="time">Time</string>
    <string name="reserved">Reserved</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="elite_events">Elite Events</string>
    <string name="guest_name">Guest Name</string>
    <string name="Guest_last_name">Guest Last Name</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Invitation_notSend">Not Send</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Enter_name">Enter Name</string>
    <string name="Do_you_want_to_delete_this_event">Do You Want To Delete This Event</string>
    <string name="Enter_PhoneNumber">Enter Phone Number</string>
    <string name="Enter_amount">Enter amount</string>
    <string name="enter_number">Enter Number</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="vendor_note">Vendor note</string>
    <string name="Do_you_want_to_delete_this">Do You Want To Delete This?</string>
    <string name="add_new_record">Add a new record</string>
    <string name="add_new_vendor">Add a new vendor</string>
    <string name="enter_time">Enter Time</string>
    <string name="Guest">Guest</string>
    <string name="Vendor">Vendor</string>
    <string name="Budget">Budget</string>
    <string name="Schedule">Schedule</string>
    <string name="enter_email">Enter Email</string>
    <string name="Adult">Adult</string>
    <string name="Child">Child</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="select_priority">Select People</string>
    <string name="select_person">Select Person</string>
    <string name="select_status">"Select Status "</string>
    <string name="Do_you_want_to_delete_this_event_">Do you want to delete this event?</string>
    <string name="Events">Events</string>
    <string name="Effortlessly_plan_and_manage_your_events"><![CDATA[Effortlessly Plan & Manage Your Events]]></string>
    <string name="with_intutive_features_such_as_guest_list_management_">With intutive features such as guest list managment, event management,event scheduling and budget tracking you can streamline your event plan</string>
    <string name="Get_started">Get Started</string>
    <string name="client_Number">Client Number</string>
    <string name="client_address">Client Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="done">Done</string>
    <string name="enter_valid_phone_number">Enter Valid Phone Number</string>
    <string name="no_record">There are no records</string>
    <string name="add_click">Click +to add a new item</string>
    <string name="is_completed">Is Completed</string>
    <string name="Theme">Theme\n</string>
    <string name="feedback">Feedback</string>
    <string name="Date_time_format">Date Time Format</string>
    <string name="share">Share</string>
    <string name="Menu">Menu</string>
    <string name="array">Date Time Format</string>


    <string name="year_month_day">(Year/Month/Day)</string>
    <string name="day_month_year">(Day/Month/Year)</string>
    <string name="month_day_year">(Month/Day/Year)</string>
    <string-array name="date_time_format">
        <item name="dmy">dd/MM/yyyy</item>
        <item name="dMy">dd-MM-yyyy</item>
        <item name="mdy">MMM dd, yyyy</item>
    </string-array>
    <string name="select_date_format">Select Date Format</string>
    <string name="select_theme_format">Select Theme Format</string>
    <string name="date_format">Date Format</string>
    <string name="time_format">Time Format</string>
    <string name="select_time_format">Select Time Format</string>
    <string name="Date_format">Date Format</string>
    <string name="Time_format">Time Format</string>
    <string name="task_track">Task Track</string>
    <string name="event_is_completed">Event Is Completed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="history">History</string>
    <string name="select_date">Select Date</string>
    <string name="Date_from">Date from</string>
    <string name="select_date_from">Select Date From</string>
    <string name="to_this">To This Date</string>
    <string name="from_date">From Date</string>
    <string name="select_to_this_date">Select To This Date</string>
    <string name="change_theme">Change Theme</string>
    <string name="change_theme_msg">Change Theme Message</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="vendor_category">Vendor Category</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="status">Status</string>
    <string name="not_send">Not Send</string>
    <string name="Status">Status:</string>
    <string name="select_person_type">Select person type</string>

    <string-array name="theme_format">
        <item name="light">Light</item>
        <item name="dark">Dark</item>
    </string-array>
    <string-array name="time_format">
        <item name="24hour_format">HH:mm</item>
        <item name="12hour_format">hh:mm aa</item>
    </string-array>
</resources>