<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/sp_10">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/closeClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_close_24"
            android:textSize="@dimen/sp_30" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_record"
            android:textSize="@dimen/sp_30"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/etScheduleNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sp_10"
        android:hint="@string/note"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/sp_10"
        android:clickable="true"
        android:drawableLeft="@drawable/baseline_date_range_24"
        android:focusable="false"
        android:hint="@string/date"
        android:inputType="none"
        android:textSize="@dimen/sp_20" />

    <EditText
        android:id="@+id/etTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/sp_10"
        android:clickable="true"
        android:drawableLeft="@drawable/baseline_access_time_24"
        android:focusable="false"
        android:hint="@string/time"
        android:inputType="none"
        android:textSize="@dimen/sp_20" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold" />

</LinearLayout>