<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="@dimen/sp_10"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/sp_10"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/closeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/baseline_close_24"
                android:textSize="@dimen/sp_20" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_guest"
                android:textSize="@dimen/sp_20"
                style="@style/CustomHighBold"
                android:textStyle="bold" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            style="@style/CustomHighBold"
            android:textSize="@dimen/sp_20"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/sp_5"
            app:cardBackgroundColor="#F9FAF0"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/name"
            style="@style/CustomMedium"
            android:inputType="textPersonName"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textStyle="bold"
            style="@style/CustomHighBold"
            android:textSize="@dimen/sp_20"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/sp_5"
            app:cardBackgroundColor="#F9FAF0"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">
        <EditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note"
            android:textSize="@dimen/sp_20"
            style="@style/CustomMedium"
            android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/adult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/adult"
                android:textSize="@dimen/sp_10"
                android:textStyle="bold"
                app:cornerRadius="0dp" />

            <RadioButton
                android:id="@+id/child"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/child"
                android:textSize="@dimen/sp_10"
                android:textStyle="bold"
                app:cornerRadius="0dp" />

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/male"
                android:textSize="@dimen/sp_10"
                android:textStyle="bold"
                app:cornerRadius="0dp" />


            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/female"
                android:textSize="@dimen/sp_10"
                android:textStyle="bold"
                app:cornerRadius="0dp" />


        </RadioGroup>


        <TextView
            android:id="@+id/group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_10"
            android:drawableLeft="@drawable/baseline_groups_24"
            android:text="@string/group"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_10"
            android:drawableLeft="@drawable/baseline_restaurant_menu_24"
            android:text="@string/menu"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/menu" />

        <TextView
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_10"
            android:drawableLeft="@drawable/baseline_table_bar_24"
            android:text="@string/table"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/table" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Phone_Number"
            android:textStyle="bold"
            style="@style/CustomHighBold"
            android:textSize="@dimen/sp_20"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/sp_5"
            app:cardBackgroundColor="#F9FAF0"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_10"
            android:hint="@string/phone"
            android:inputType="number"
            android:maxLength="10"
            style="@style/CustomMedium"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"
            style="@style/CustomHighBold"
            android:textSize="@dimen/sp_20"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/sp_5"
            app:cardBackgroundColor="#F9FAF0"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/sp_20"
            style="@style/CustomMedium"
            android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textStyle="bold"
            style="@style/CustomHighBold"
            android:textSize="@dimen/sp_20"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/sp_5"
            app:cardBackgroundColor="#F9FAF0"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">
        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_10"
            android:hint="@string/address"
            android:textSize="@dimen/sp_20"
            style="@style/CustomMedium"
            android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
       <RadioGroup
           android:id="@+id/rgSend"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_gravity="center"
           >
           <RadioButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/Invitation_send"
               android:id="@+id/invitationSend"
               android:textSize="@dimen/sp_15"
               android:textStyle="bold"/>
           <RadioButton
               android:id="@+id/notSend"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/notsend"
               android:textSize="@dimen/sp_15"
               android:textStyle="bold" />
       </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_10"
            android:text="@string/save"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            style="@style/CustomHighBold"
            app:cornerRadius="@dimen/sp_10" />

    </LinearLayout>

</ScrollView>