<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/sp_10">
    <TextView
        android:id="@+id/tvNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNote"
        android:text="@string/date"
        android:textSize="@dimen/sp_20" />
    <TextView
        android:id="@+id/tvTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:layout_below="@id/tvDate"
        android:textSize="@dimen/sp_20" />
    <TextView
        android:id="@+id/tvUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTime"
        android:drawableTop="@drawable/baseline_create_24"
        />
    <TextView
        android:id="@+id/tvDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/baseline_delete_24"
        android:layout_marginLeft="@dimen/sp_50"
        android:layout_below="@id/tvTime"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/sp_10"
        android:layout_below="@id/tvUpdate"
        android:background="@color/black" />



</RelativeLayout>